Ensure header z-index is highest

--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -4,7 +4,7 @@ header {
   width: 100%;
   height: 5vh;
   opacity: 100%;
-  z-index: 10;
+  z-index: 100000;
   background-image: linear-gradient(black, #151515);
   color: white;
   display: grid;
@@ -13,6 +13,6 @@ header {
 
 .site-name {
   height: auto;
-  width: 100%;
+  width: 90%;
 }
 
